--- a/family.html
+++ b/family.html
@@ -11,12 +11,12 @@
 <body>
 	<header>
 		<nav>
-			<ol>
+			<ul>
 				<li class="active"><a href = "index.html" >About Me</a></li>
 				<li><a href = "family.html">My Family</a></li>
 				<li><a href = "random.html">Random Stuff</a></li>
 				<li><a href = "http://www.si.umich.edu">UMSI</a></li>
-			</ol>
+			</ul>
 		</nav>
 		<h1>Family</h1>
 
@@ -25,11 +25,11 @@
 
 	<main>
 		<p>In 2016 I loaded my kids into the minivan and took them on a drive across the Northern midwest states.  We went to Wisconsin Dells, the Badlands, Mount Rushmore, Jewel Cave, and Custer State Park.<br></p>
-			<img src = "wiscosin_dells.jpg" width="25" alt = "A boy and two girls in zip line gear posing in front of sign for Sasquatch Lake"/>
-			<img src = "badlands.jpg" width="1000" alt="A boy and two girls posing in front of the Badlands national Park sign"/>
-			<img src = "falling.jpg" width="25" alt="A boy hanging off cliff rock"/>
-			<img src = "rushmore.jpg" width="1000" alt = "Mount Rushmore"/>
-			<img src = "jewel_cave.jpg" width="25" alt="A boy and two girls in front of the Jewel Cave sign"/>
+			<img src = "images/wisconsin_dells.jpg" width="25" alt ="A boy and two girls in zip line gear posing in front of sign for Sasquatch Lake"/>
+			<img src = "images/badlands.jpg" width="25" alt="A boy and two girls posing in front of the Badlands national Park sign"/>
+			<img src = "images/falling.jpg" width="25" alt="A boy hanging off cliff rock"/>
+			<img src = "images/rushmore.jpg" width="25" alt = "Mount Rushmore"/>
+			<img src = "images/jewel_cave.JPG" width="25" alt="A boy and two girls in front of the Jewel Cave sign"/>
 		<p>I didn't plan for the fact that the Strugis Motorcycle rally would overlap with our trip.  Many towns were closed to through traffic and the lack of internet required that we use paper maps. Often.</p>
 	</main>
 
